apps/base/dumb/dumb-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dumb
  namespace: dumb
  annotations:
    gethomepage.dev/href: "https://dumb.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "DUMB"
    gethomepage.dev/description: "Debrid Unlimited Media Bridge"
    gethomepage.dev/group: "Media"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dumb.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: dumb-frontend
          port: 3005
  tls: {}
